# free

./: .emacs  .gitignore  .gitmodules  README.md  index.html  pal.lua  params.json  readme.md  rev.lua
acr/: readme.md
algebra_ws/: matrix.py  matrix.py~
aviation/: face.md
awk/: ip.awk
awk_ws/: ip.awk  month.awk
bash/: variable.sh
bash/calculator/: calculator.sh
bash/case/: case.sh
bash/file/: file.sh  output.txt  read_file.sh
bash/for/: chessboard.sh  for2.sh
bash/hello_world/: readme.md
bash/if/: readme.md
bash/nested_for/: nested_for.sh  nested_for.sh~
bash/note/: note.sh
bash/read/: readme.md  readp.sh  reads.sh
bash/readonly/: readonly.sh
bash/shebang/: readme.md
bash/variable/: readme.md  variable.sh
bash/while/: infinity.sh  while1.sh
bash_ws/: comment.sh  note.sh  readme.md  shebang.sh  variable.sh
bash_ws/IFS/: ifs.sh
bash_ws/comments/: readme.md
bash_ws/declare/: declare.sh
bash_ws/for/: for.sh  readme.md
bash_ws/hello_world/: hello_world.sh
bash_ws/if/: if.sh
bash_ws/read/: read.sh  readt.sh
bash_ws/unset/: unset.sh
bash_ws/while/: infinity.sh  while2.sh
c/UDP/: Makefile  udp_attack.c
c/brute_force/: brute_force  brute_force.c  brute_force2.c
c/callback/: readme.md
c_ws/: minimum.c  readme.md
cpp/CMakeExample/circle/: CMakeLists.txt
cpp/CMakeExample/circle/inc/: circle.h
cpp/CMakeExample/circle/src/: circle.cpp
cpp/CMakeExample/square/: CMakeLists.txt
cpp/CMakeExample/square/inc/: square.h
cpp/CMakeExample/square/src/: square.cpp
cpp/Pipemill/: CMakeCache.txt  CMakeLists.txt  InConnector.hpp  InputFilter.cpp  MultiPipeline.cpp  MultiPipeline.hpp  OutConnector.cpp  OutputFilter.hpp  Pipeline.cpp  ProcessFilter.cpp  TBBTest.hpp  cmake_install.cmake
cpp/nanogui/psu/: CMakeLists.txt  main.cpp  psu.cpp  psu.h
emacs/: .emacs  notes.md
etftp/: Makefile  etftp_msg.h  main.cpp  mainwindow.cpp
godot/: AC.gd  Addition.gd  Backspace.gd  Division.gd  Equal.gd  GodotCalculator.pck  HelloWorld.pck  Memory.gd  Multiplication.gd  Number0.gd  Number1.gd  Number2.gd  Number3.gd  Number4.gd  Number5.gd  Number6.gd  Number7.gd  Number8.gd  Number9.gd  Subtraction.gd  export_presets.cfg  font.tres  main.tscn  project.godot  top.tres
gstreamer/: streamer.sh
gstreamer/test/: CMakeLists.txt  main.c
haskell/: hello.hs  hello.hs~  notes.md
linux/: .emacs
lisp/: cd-db.lisp
lisp_ws/: double-num.lisp  greater.lisp
lua/: fact.lua  ins.lua  mm.lua  module.lua  modulo.lua  poly.lua  str_to_bin.lua
midi/: midi-tutorial.md
octave/: circle.m
osg/osg-shape/: CMakeLists.txt  notes.md
osg/osg-shape/src/: main.cpp
perl_ws/: hello_world.pl
python/: demo1.py  palindrome.py
python_ws/: bin_to_dec.py
racket/: drracket.rkt  notes.md  test.rkt
sbcl/: asteriks_count.lisp  is_consist.lisp  new_union.lisp  occurrences.lisp  readme.md
sbcl_ws/: duplication.lisp  enigma.lisp  global_var.lisp  index_in_list.lisp  negative.lisp  new_union.lisp  occurrences.lisp  print.lisp  print_text.lisp
scheme/: example1.ss  make-counter.scm  make-list.scm  memv.scm  my-length.scm  notes.md  queue.scm  reciprocal.ss  remv.scm  short.scm  shorter.csm  sign.scm  stack.scm  test.scm  transpose.scm
t/: readme.md
tcl/: message
thesis/face/: CMakeLists.txt  Project.ede
thesis/face/docs/: component-diagram.uxf  farch.uxf  sequence-diagram.uxf  state-machine.uxf
thesis/face/inc/core/: fobject.h
thesis/face/inc/ioss/: ios.h
thesis/face/inc/pcs/: pcs.h
thesis/face/inc/pcss/: pcs.h
thesis/face/inc/psss/: psc.h  psd.h
thesis/face/inc/tss/: tss.h
thesis/face/inc/tsss/: tss.h
thesis/face/src/core/: fobject.cpp
thesis/face/src/ioss/: ios.cpp
thesis/face/src/pcs/: pcs.cpp
thesis/face/src/pcss/: pcs.cpp
thesis/face/src/psss/: psc.cpp  psd.cpp
thesis/face/src/tss/: tss.cpp
thesis/face/src/tsss/: tss.cpp
translate/: 5reasonforcpp.md  Z80_I.md  microprocessor.md
(+1291 files in other folders)
