cmake_minimum_required(VERSION 3.2)
project(face VERSION 0.0.0 DESCRIPTION "face lib")
include_directories(inc)
add_subdirectory(src/ioss)
add_subdirectory(src/psss)
add_subdirectory(src/tss)
add_subdirectory(src/pcs)
add_library({PROJECT_NAME} SHARED src/ioss/ios.cpp src/psss/psd.cpp src/psss/psc.cpp src/tss/tss.cpp src/pcs/pcs.cpp)
